objects/nFORCE__Layout__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Category__c</fullName>
        <description>Use this multi-select picklist field to indicate which Group categories can be assigned this layout.</description>
        <inlineHelpText>Indicate which Group categories can be assigned this layout.</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Dashboard</fullName>
                </value>
                <value>
                    <fullName>Online Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Generator_Class__c</fullName>
        <description>If selected, the final risk grade will be a round number. If deselected, the final risk grade will be a decimal number.</description>
        <label>Generator Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Layout_Description__c</fullName>
        <description>Use this rich text field to enter a description of the layout. Note additional details (such as number of columns, tiles [yes/no/location/number], progress, nav, content, header, footer, visible/hidden).</description>
        <inlineHelpText>Enter a description of the layout, noting additional details (such as number of columns, tiles [yes/no/location/number], progress, nav, content, header, footer, visible/hidden).</inlineHelpText>
        <label>Layout Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__Layout_Preview_Image__c</fullName>
        <description>Use this text field to enter the URL for the preview image for the page layout.</description>
        <inlineHelpText>Enter the URL for the preview image for the page layout.</inlineHelpText>
        <label>Layout Preview Image</label>
        <length>2083</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Visualforce_Page__c</fullName>
        <description>Use this text field to enter the fully qualified (includes namespace if applicable) Visualforce page that implements the layout.</description>
        <inlineHelpText>Enter the name of the Visualforce page (including namespace if applicable) that implements the layout.</inlineHelpText>
        <label>Visualforce Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm).</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Layout</label>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>